Scrollbar fix

--- a/jobs/Frontend/movies-work/src/components/MoviesList/MoviesList.module.css
+++ b/jobs/Frontend/movies-work/src/components/MoviesList/MoviesList.module.css
@@ -1,4 +1,4 @@
-/* TODO this should probably be in the  */
+/* CSS  */
 .moviesList:has(li:hover) li:not(:hover) {
   opacity: 0.7;
   transition: all 0.3s ease;
@@ -9,26 +9,20 @@
     max-height: 70vh;
     height: 70vh;
     overflow-y: scroll;
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
   }
 
   .moviesList::-webkit-scrollbar {
-    /* display: none; */
     width: 5px;
   }
 
-  /* Track */
   .moviesList::-webkit-scrollbar-track {
     background: rgb(55 65 81);
   }
 
-  /* Handle */
   .moviesList::-webkit-scrollbar-thumb {
     background: rgb(207, 207, 207);
   }
 
-  /* Handle on hover */
   .moviesList::-webkit-scrollbar-thumb:hover {
     background: white;
   }
